# presley

./: .gitignore  ADDROI_CONFIRMATION.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  NOISE_MODE_DECISION_REPORT.md  README.md  cleanup_grid_search_results.py  environment.yaml  experiments.yaml  install_openmmlab.sh  pyproject.toml  pytest.ini
.agents/: AGENTS.md
.agents/agents/: experiment-runner.md  paper-editor.md
.agents/hooks/: guard-rm.py
.agents/rules/: presley.md
.agents/skills/results-report/: SKILL.md
.agents/skills/reviewer-response/: SKILL.md
.agents/skills/run-experiment/: SKILL.md
.agents/skills/update-reports/: SKILL.md
.claude/: settings.json
.claude/agents/: experiment-runner.md  paper-editor.md
.claude/hooks/: guard-rm.py  guard-wait-loop.py  paper-sync-reminder.py  session-status.py
.claude/skills/results-report/: SKILL.md
.claude/skills/reviewer-response/: SKILL.md
.claude/skills/run-experiment/: SKILL.md
.claude/skills/test-design/: SKILL.md
.claude/skills/update-paper/: SKILL.md
.claude/skills/update-reports/: SKILL.md
.github/instructions/: presley.instructions.md
.github/workflows/: ci.yml
docs/: video-ai-model-optimization.md
scripts/: addroi_confirmation.py  audit_videos.py  bd_rate.py
src/presley/: __init__.py  cli.py  compare.py  concurrency.py  config.py  degradation.py  encode_utils.py  encoding.py  gpu_utils.py  hnerv_arch.py  hnerv_utils.py  invariants.py  io.py  metrics.py  pipeline.py  pipeline_legacy.py  preprocessing.py  restoration.py  runner.py  search.py  sidechannel.py  utils.py
src/presley/components/: __init__.py  baselines.py  elvis.py  evaluation.py  presley_ai.py  roi.py
src/presley/evaluation/: __init__.py  backfill.py  cache.py  cli.py  fvmd.py  masked.py  perceptual.py  reports.py  run.py  vmaf.py
tests/: conftest.py  test_compare.py  test_encode_utils.py  test_evaluation_package.py  test_experiments_config.py  test_invariants.py  test_io.py  test_masked_metrics.py  test_preprocessing.py  test_runner_hash.py
tests/invariants/: test_results_tree.py
tools/: check_architecture.py  host_rules_snapshot.md  noise_mode_decision_analysis.py  pick_noise_region.py  sync_agent_rules.py
