[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presley"
version = "0.1.0"
description = "PRESLEY: Perceptual Refinement of an End-to-End Video Streaming Pipeline via Generative AI Layers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy<2",
  "pandas",
  "tqdm",
  "regex",
  "matplotlib",
  "imageio",
  "tensorboard",
  "timm",
  "openmim",
  "pywavelets",
  "scikit-image",
  "scipy==1.10.1",
  "ipykernel",
  "decord",
  "pytorch_msssim",
  "dahuffman",
  "pytorchvideo",
  "lpips",
  "opencv-python==4.8.0.76",
  "basicsr",
  "facexlib",
  "gfpgan",
  "diffusers==0.30",
  "accelerate",
  "datasets",
  "einops==0.6.1",
  "kornia",
  "peft==0.10.0",
  "pyrallis",
  "tokenizers>=0.14,<0.19",
  "transformers==4.36",
  "gradio",
  "fvmd",
  "pyyaml",
  "DISTS_pytorch",
  "torchmetrics[image]==1.4.0"
]

[project.optional-dependencies]
# Pure-Python test tooling only. Deliberately separate from the runtime deps
# above, which are pinned tightly because the forked model code is version
# sensitive — CI installs this extra against CPU torch and never resolves them.
test = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]

[project.scripts]
presley-run = "presley.runner:main"
presley-evaluate = "presley.components.evaluation:main"
presley-compare = "presley.compare:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["presley*"]

[tool.coverage.run]
source = ["src/presley"]

[tool.coverage.report]
# Only modules whose behaviour needs a GPU or model weights to exercise. The
# gate is meant to describe what is actually verified, so an entry here is a
# debt to repay, not a permanent exemption: delete it when the module gains
# real tests, and never add one to make a number go up.
omit = [
  "*/presley/restoration.py",
  "*/presley/degradation.py",
  "*/presley/hnerv_arch.py",
  "*/presley/hnerv_utils.py",
  "*/presley/gpu_utils.py",
  "*/presley/concurrency.py",
  "*/presley/preprocessing.py",
  "*/presley/sidechannel.py",
  "*/presley/components/presley_ai.py",
  "*/presley/components/elvis.py",
  "*/presley/components/baselines.py",
  "*/presley/components/roi.py",
  # The evaluation package's GPU-bound and IO-bound halves. masked.py is
  # deliberately absent — splitting the old monolith is what made those metrics
  # testable without a GPU, and they are now covered.
  "*/presley/evaluation/perceptual.py",
  "*/presley/evaluation/vmaf.py",
  "*/presley/evaluation/fvmd.py",
  "*/presley/evaluation/cache.py",
  "*/presley/evaluation/run.py",
  "*/presley/evaluation/backfill.py",
  "*/presley/evaluation/reports.py",
  "*/presley/evaluation/cli.py",
]
